Mistakenly changed GridMBeanSelfTest.java restored. Test against IGNITE_DISABLE_MBEANS added with its own name.